--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.schema=classpath*:db/${database}/schema.sql
 #spring.datasource.data=classpath*:db/${database}/data.sql
 
-spring.datasource.url=jdbc:mysql://localhost:3306/petclinic
+spring.datasource.url=jdbc:mysql://192.168.1.101:3306/petclinic
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
