--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
   <version>2.5.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -133,6 +135,15 @@
 
   <build>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+        <configuration>
+          <webappDirectory>target/serveur</webappDirectory>
+        </configuration>
+      </plugin>
+
       <!--<plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
